--- a/index.html
+++ b/index.html
@@ -8,5 +8,22 @@
 </head>
 <body>
     Hi! I am Inshirah.
+
+    Commit messages:
+
+    feat - a new feature
+    fix - a bug fix
+    docs - changes in documentation
+    style - everything related to styling
+    refactor - code changes that neither fixes a bug or adds a feature
+    test - added a unit test for leapYearCheck()
+    chore - updating build tasks, package manager configs, etc
+
+    You added some details to the README.md file? = docs : Added details to Readme.md 
+    Your CLI app was taking "potato" as an input for leap year test? = fix: validating input for leap year
+    You started using CHALK library in your CLI app? = style: added CHALK for this app
+    You added level based game play in your CLI app? = feat: added level based gamleplay
+    You renamed your variables from var a to var questions? = refactor: renaming the variable from var a to var questions
+
 </body>
 </html>
