docs: added shortcuts

--- a/index.html
+++ b/index.html
@@ -16,13 +16,23 @@
         style - everything related to styling
         refactor - code changes that neither fixes a bug or adds a feature
         test - added a unit test for leapYearCheck()
-        chore - updating build tasks, package manager configs, etc </p>
+        chore - updating build tasks, package manager configs, etc. </p>
 
     <p> You added some details to the README.md file? = docs : Added details to Readme.md 
         Your CLI app was taking "potato" as an input for leap year test? = fix: validating input for leap year
         You started using CHALK library in your CLI app? = style: added CHALK for this app
         You added level based game play in your CLI app? = feat: added level based gamleplay
         You renamed your variables from var a to var questions? = refactor: renaming the variable from var a to var questions </p>
+
+    <p><ul>
+        show/hide terminal -    ctrl  `
+        show/hide sidebar -     ctrl B
+        open file -             ctrl P
+        command pallete -       ctrl shft P
+        jump to line number-    ctrl P -> :11
+        jump to symbol -        ctrl P -> @body
+        toggle wrap -           alt Z
+    </ul></p>
     
 
 </body>
