--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
         You added level based game play in your CLI app? = feat: added level based gamleplay
         You renamed your variables from var a to var questions? = refactor: renaming the variable from var a to var questions </p>
 
-    <p><ul>
-        show/hide terminal -    ctrl  `
-        show/hide sidebar -     ctrl B
-        open file -             ctrl P
-        command pallete -       ctrl shft P
-        jump to line number-    ctrl P -> :11
-        jump to symbol -        ctrl P -> @body
-        toggle wrap -           alt Z
-    </ul></p>
+    <ol>
+        show/hide terminal -    ctrl ` ; 
+        show/hide sidebar -     ctrl B ; 
+        open file -             ctrl P ; 
+        command pallete -       ctrl shft P ; 
+        jump to line number-    ctrl P -> :11 ; 
+        jump to symbol -        ctrl P -> @body ; 
+        toggle wrap -           alt Z ; 
+    </ol>
     
 
 </body>
