--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         You started using CHALK library in your CLI app? = style: added CHALK for this app
         You added level based game play in your CLI app? = feat: added level based gamleplay
         You renamed your variables from var a to var questions? = refactor: renaming the variable from var a to var questions </p>
+    
+    <h5>Shortcuts: </h5>
 
     <ol>
         show/hide terminal -    ctrl ` ; 
