updated project details

--- a/index.html
+++ b/index.html
@@ -27,14 +27,19 @@
     <h5>Shortcuts: </h5>
 
     <ol>
-        show/hide terminal -    ctrl ` ; 
-        show/hide sidebar -     ctrl B ; 
-        open file -             ctrl P ; 
-        command pallete -       ctrl shft P ; 
-        jump to line number-    ctrl P -> :11 ; 
-        jump to symbol -        ctrl P -> @body ; 
-        toggle wrap -           alt Z ; 
+        <li>show/hide terminal -    ctrl ` ;  </li>
+        <li>show/hide sidebar -     ctrl B ;   </li>
+        <li>open file -             ctrl P ;  </li>
+        <li>command pallete -       ctrl shft P ;  </li>
+        <li>jump to line number-    ctrl P -> :11 ;  </li>
+        <li>jump to symbol -        ctrl P -> @body ;  </li>
+        <li>toggle wrap -           alt Z ;  </li>
+       
     </ol>
+
+    <h5>Project details </h5>
+
+    <p> Worked on few CLI apps. </p>
     
 
 </body>
